Fix media library dialog height on small window

--- a/app/client/admin/components/shared/mediaLibraryDialog/mediaLibraryDialog.scss
+++ b/app/client/admin/components/shared/mediaLibraryDialog/mediaLibraryDialog.scss
@@ -10,21 +10,21 @@
   &.opa-dialog-80 {
     width: 80%;
     max-width: 80%;
-    height: 630px;
+    height: 100%;
     max-height: 630px;
   }
 
   &.opa-dialog-55 {
     width: 55%;
     max-width: 55%;
-    height: 654px;
+    height: 100%;
     max-height: 654px;
   }
 
   &.opa-dialog-40 {
     width: 40%;
     max-width: 40%;
-    height: 654px;
+    height: 100%;
     max-height: 654px;
   }
 
